# pdf-editor

./: .gitignore  AGENTS.md  Dockerfile.dev  QA_BROWSER_CHECKLIST.md  QA_BROWSER_REPORT.md  README.md  docker-compose.yml
.devcontainer/: devcontainer.json
apps/web/: index.html  package-lock.json  package.json
apps/web/src/: App.css  App.test.tsx  App.tsx  OcrApp.test.tsx  PdfTextLayerApp.test.tsx
apps/web/src/components/: OcrDialog.tsx
apps/web/src/ocr/: ocr.test.ts  ocr.ts
apps/web/src/organize/: pagePlan.test.ts  pagePlan.ts
apps/web/src/pdf/: textLayer.test.ts  textLayer.ts  textSelection.test.ts  textSelection.ts
apps/web/src/storage/: viewerStorage.test.ts  viewerStorage.ts
apps/web/src/test/: setup.ts
services/pdf-engine/: pyproject.toml
services/pdf-engine/app/: main.py  ocr.py
services/pdf-engine/tests/: test_export_organize.py  test_main.py  test_ocr.py
