[project]
name = "pdf-engine"
version = "0.1.0"
description = "FastAPI backend for the local PDF editor MVP"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.6",
    "pydantic==2.10.4",
    "pypdf>=6.14.2",
    "python-multipart>=0.0.32",
    "uvicorn[standard]==0.34.0",
]

[dependency-groups]
dev = [
    "pytest==8.3.4",
    "ruff==0.8.4",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.pytest.ini_options]
pythonpath = ["."]
markers = [
    "integration: tests that invoke locally installed OCR binaries",
]
